--- a/Number of the day/index.html
+++ b/Number of the day/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun Math Facts</title>
+    <title>Number of the Day!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
